--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>1.0.0-RELEASE</version>
+            <version>1.0.4</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
