Description: Excel文件读取,写新文件 Date: 0828 Author: SL Type: ADD

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ common:
     file:
       path: /tmp/orc/upload/
       keep: 1
+      outsheet: 识别结果
+      keepsheet: body
 spring:
   profiles:
     active: msg
