--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <!--</exclusions>-->
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
@@ -103,20 +108,6 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.10</version>
-        </dependency>
-        <dependency>
-            <groupId>com.huawei</groupId>
-            <artifactId>ais-client-sdk</artifactId>
-            <version>1.0.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ais-client-sdk-1.0.1.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.huawei</groupId>
-            <artifactId>hw_ocr_sdk</artifactId>
-            <version>1.0.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/hw_ocr_sdk.jar</systemPath>
         </dependency>
     </dependencies>
 
